refactor: nested 활용하여 연관된 테스트 묶기