@@ -30,6 +30,7 @@ import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.Product;
 import kitchenpos.domain.TableGroup;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.TestConstructor;
@@ -90,113 +91,121 @@ class TableGroupServiceTest {
         저장된_주문_테이블2 = orderTableDao.save(주문_테이블(null, null, 3, true));
     }
 
-    @Test
-    void 테이블_그룹을_정상적으로_등록한다() {
-        // given
-        final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
+    @Nested
+    class 테이블_그룹_등록_시 {
 
-        // when
-        final TableGroup 저장된_테이블_그룹 = tableGroupService.create(테이블_그룹);
+        @Test
+        void 테이블_그룹을_정상적으로_등록한다() {
+            // given
+            final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
 
-        // then
-        assertThat(저장된_테이블_그룹.getOrderTables().get(0).getTableGroupId())
-                .isEqualTo(저장된_테이블_그룹.getId());
+            // when
+            final TableGroup 저장된_테이블_그룹 = tableGroupService.create(테이블_그룹);
+
+            // then
+            assertThat(저장된_테이블_그룹.getOrderTables().get(0).getTableGroupId())
+                    .isEqualTo(저장된_테이블_그룹.getId());
+        }
+
+        @Test
+        void 주문_테이블이_비어있으면_예외가_발생한다() {
+            // given
+            final TableGroup 테이블_그룹 = 테이블_그룹(null, null, Collections.emptyList());
+
+            // expected
+            assertThatThrownBy(() -> tableGroupService.create(테이블_그룹))
+                    .isInstanceOf(IllegalArgumentException.class);
+        }
+
+        @Test
+        void 주문_테이블의_개수가_2미만이면_예외가_발생한다() {
+            // given
+            final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1));
+
+            // expected
+            assertThatThrownBy(() -> tableGroupService.create(테이블_그룹))
+                    .isInstanceOf(IllegalArgumentException.class);
+        }
+
+        @Test
+        void 입력받은_주문_테이블의_개수와_조회한_주문_테이블의_개수가_다르면_예외가_발생한다() {
+            // given
+            final OrderTable 저장되지_않은_주문_테이블 = 주문_테이블(null, null, 0, true);
+            final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장되지_않은_주문_테이블));
+
+            // expected
+            assertThatThrownBy(() -> tableGroupService.create(테이블_그룹))
+                    .isInstanceOf(IllegalArgumentException.class);
+        }
+
+        @Test
+        void 입력받은_주문_테이블이_비어있지_않으면_예외가_발생한다() {
+            // given
+            final OrderTable 저장된_주문_테이블1 = orderTableDao.save(주문_테이블(null, null, 2, false));
+            final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
+
+            // expected
+            assertThatThrownBy(() -> tableGroupService.create(테이블_그룹))
+                    .isInstanceOf(IllegalArgumentException.class);
+        }
+
+        @Test
+        void 입력받은_주문_테이블이_이미_테이블_그룹에_등록되어_있으면_예외가_발생한다() {
+            // given
+            final OrderTable 저장된_주문_테이블1 = orderTableDao.save(주문_테이블(null, null, 2, true));
+            tableGroupService.create(테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2)));
+
+            final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
+
+            // expected
+            assertThatThrownBy(() -> tableGroupService.create(테이블_그룹))
+                    .isInstanceOf(IllegalArgumentException.class);
+        }
     }
 
-    @Test
-    void 테이블_그룹_등록시_주문_테이블이_비어있으면_예외가_발생한다() {
-        // given
-        final TableGroup 테이블_그룹 = 테이블_그룹(null, null, Collections.emptyList());
+    @Nested
+    class 테이블_그룹_해제_시 {
 
-        // expected
-        assertThatThrownBy(() -> tableGroupService.create(테이블_그룹))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
+        @Test
+        void 테이블_그룹을_정상적으로_해제한다() {
+            // given
+            final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
+            final TableGroup 저장된_테이블_그룹 = tableGroupService.create(테이블_그룹);
 
-    @Test
-    void 테이블_그룹_등록시_주문_테이블의_개수가_2미만이면_예외가_발생한다() {
-        // given
-        final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1));
+            // expected
+            assertDoesNotThrow(() -> tableGroupService.ungroup(저장된_테이블_그룹.getId()));
+        }
 
-        // expected
-        assertThatThrownBy(() -> tableGroupService.create(테이블_그룹))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
+        @Test
+        void 주문_상태가_COOKING인_경우_예외가_발생한다() {
+            // given
+            final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
+            final TableGroup 저장된_테이블_그룹 = tableGroupService.create(테이블_그룹);
 
-    @Test
-    void 테이블_그룹_등록시_입력받은_주문_테이블의_개수와_조회한_주문_테이블의_개수가_다르면_예외가_발생한다() {
-        // given
-        final OrderTable 저장되지_않은_주문_테이블 = 주문_테이블(null, null, 0, true);
-        final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장되지_않은_주문_테이블));
+            final Order 주문 = 주문(null, 저장된_주문_테이블1.getId(), null, null, Collections.emptyList());
+            주문.setOrderStatus(OrderStatus.COOKING.name());
+            주문.setOrderedTime(LocalDateTime.now());
+            orderDao.save(주문);
 
-        // expected
-        assertThatThrownBy(() -> tableGroupService.create(테이블_그룹))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
+            // expected
+            assertThatThrownBy(() -> tableGroupService.ungroup(저장된_테이블_그룹.getId()))
+                    .isInstanceOf(IllegalArgumentException.class);
+        }
 
-    @Test
-    void 테이블_그룹_등록시_입력받은_주문_테이블이_비어있지_않으면_예외가_발생한다() {
-        // given
-        final OrderTable 저장된_주문_테이블1 = orderTableDao.save(주문_테이블(null, null, 2, false));
-        final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
+        @Test
+        void 주문_상태가_MEAL인_경우_예외가_발생한다() {
+            // given
+            final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
+            final TableGroup 저장된_테이블_그룹 = tableGroupService.create(테이블_그룹);
 
-        // expected
-        assertThatThrownBy(() -> tableGroupService.create(테이블_그룹))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
+            final Order 주문 = 주문(null, 저장된_주문_테이블1.getId(), null, null, Collections.emptyList());
+            주문.setOrderStatus(OrderStatus.MEAL.name());
+            주문.setOrderedTime(LocalDateTime.now());
+            orderDao.save(주문);
 
-    @Test
-    void 테이블_그룹_등록시_입력받은_주문_테이블이_이미_테이블_그룹에_등록되어_있으면_예외가_발생한다() {
-        // given
-        final OrderTable 저장된_주문_테이블1 = orderTableDao.save(주문_테이블(null, null, 2, true));
-        tableGroupService.create(테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2)));
-
-        final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
-
-        // expected
-        assertThatThrownBy(() -> tableGroupService.create(테이블_그룹))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
-
-    @Test
-    void 테이블_그룹을_정상적으로_해제한다() {
-        // given
-        final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
-        final TableGroup 저장된_테이블_그룹 = tableGroupService.create(테이블_그룹);
-
-        // expected
-        assertDoesNotThrow(() -> tableGroupService.ungroup(저장된_테이블_그룹.getId()));
-    }
-
-    @Test
-    void 테이블_그룹_해제시_주문_상태가_COOKING인_경우_예외가_발생한다() {
-        // given
-        final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
-        final TableGroup 저장된_테이블_그룹 = tableGroupService.create(테이블_그룹);
-
-        final Order 주문 = 주문(null, 저장된_주문_테이블1.getId(), null, null, Collections.emptyList());
-        주문.setOrderStatus(OrderStatus.COOKING.name());
-        주문.setOrderedTime(LocalDateTime.now());
-        orderDao.save(주문);
-
-        // expected
-        assertThatThrownBy(() -> tableGroupService.ungroup(저장된_테이블_그룹.getId()))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
-
-    @Test
-    void 테이블_그룹_해제시_주문_상태가_MEAL인_경우_예외가_발생한다() {
-        // given
-        final TableGroup 테이블_그룹 = 테이블_그룹(null, null, List.of(저장된_주문_테이블1, 저장된_주문_테이블2));
-        final TableGroup 저장된_테이블_그룹 = tableGroupService.create(테이블_그룹);
-
-        final Order 주문 = 주문(null, 저장된_주문_테이블1.getId(), null, null, Collections.emptyList());
-        주문.setOrderStatus(OrderStatus.MEAL.name());
-        주문.setOrderedTime(LocalDateTime.now());
-        orderDao.save(주문);
-
-        // expected
-        assertThatThrownBy(() -> tableGroupService.ungroup(저장된_테이블_그룹.getId()))
-                .isInstanceOf(IllegalArgumentException.class);
+            // expected
+            assertThatThrownBy(() -> tableGroupService.ungroup(저장된_테이블_그룹.getId()))
+                    .isInstanceOf(IllegalArgumentException.class);
+        }
     }
 }
